# Rusty-Raft

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: hashmap.rs
src/: build.rs  lib.rs
src/client/: mod.rs  state_machine.rs
src/common/: constants.rs  mod.rs
src/protocol/: raft.capnp  rpc.capnp
src/rpc/: mod.rs  test.rs
src/rpc/client/: mod.rs
src/rpc/server/: mod.rs  test.rs
src/server/: constants.rs  log.rs  metadata_file.rs  mod.rs  peer.rs  state_file.rs  state_machine.rs
src/state_machine/: mod.rs
tests/: integration_tests.rs
tests/mock_state_machine/: mod.rs
tests/relay_server/: mod.rs
