[package]
name = "rusty_raft"
version = "0.1.0"
authors = ["Jason Teplitz <jteplitz602@gmail.com>", "Sydney Li <sydli@stanford.edu>"]
build = "src/build.rs"

[dependencies]
capnp = "0.8.0"
rand = "0.3"
matches = "0.1.4"
mio="0.6.5"
log="0.3.7"
rustc-serialize = "0.3"

[build-dependencies]
capnpc = "*"

[dev-dependencies]
env_logger = "0.3"
